Final SecurityConfig - correct rule ordering